# openscad_dependencies

./: .gitignore  CLAUDE.md  README.rst  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
openscad_dependencies/: __init__.py
tests/: test_analyzer.py
