[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscad_dependencies"
version = "1.0.0"
authors = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
maintainers = [
  { name="Revar Desmera", email="revarbat@gmail.com" },
]
description = "A tool for finding dependencies in OpenSCAD language source code."
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["openscad", "openscad dependencies", "dependencies"]
dependencies = [
    "arpeggio>=2.0.3",
    "openscad_parser>=1.0.1",
]

[project.urls]
"Homepage" = "https://github.com/belfryscad/openscad_dependencies"
"Repository" = "https://github.com/belfryscad/openscad_dependencies"
"Bug Tracker" = "https://github.com/belfryscad/openscad_dependencies/issues"
"Releases" = "https://github.com/belfryscad/openscad_dependencies/releases"
"Usage" = "https://github.com/belfryscad/openscad_dependencies/README.rst"

[project.scripts]
openscad-dependencies = "openscad_dependencies:main"

[tool.hatch.build.targets.wheel]
packages = ["openscad_dependencies"]

[tool.hatch.build.targets.sdist]
include = [
    "openscad_dependencies/",
    "tests/",
    "README.rst",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

